# quicks

./: .gitignore  Makefile  README.md  README.rst  example.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
quicks/: __init__.py  __main__.py  core.py  exceptions.py
quicks/cli/: main.py
tests/: conftest.py  test_core.py
