[tool.poetry]
name = "quicks"
version = "0.0.5"
description = "Quicks Project Generator"
authors = ["Danil Akhtarov <daxartio@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/daxartio/quicks"
homepage = "https://pypi.org/project/quicks"
keywords = []

[tool.poetry.scripts]
quicks = 'quicks.cli.main:run'

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
jinja2 = "^2.11.2"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
asynctest = "*"
autoflake = "*"
black = {version = "*", allow-prereleases = true}
flake8 = "*"
flake8-annotations-complexity = "*"
flake8-bandit = "*"
flake8-breakpoint = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-eradicate = "*"
flake8-if-expr = "*"
flake8-isort = "*"
flake8-logging-format = "*"
flake8-print = "*"
flake8-pytest = "*"
flake8-pytest-style = "*"
flake8-requirements = "*"
flake8-return = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mypy = "*"
pep8-naming = "*"
pylint = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-mock = "*"
toml = "*"
unify = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"